# pydefi

./: .envrc.example  .gitignore  README.md  pyproject.toml
.github/agents/: abi-patterns.md  contract-interactions.md  conversion-conventions.md
.github/workflows/: tests.yml
pydefi/: __init__.py  _utils.py  deployments.py  exceptions.py  pools.py  rpc.py  types.py
pydefi/abi/: __init__.py  amm.py  approve_permit.py  bridge.py  codec.py  vm.py
pydefi/aggregator/: __init__.py  base.py  jupiter.py  okx.py  oneinch.py  openocean.py  paraswap.py  uniswap.py  zerox.py
pydefi/amm/: __init__.py  base.py  curve.py  raydium.py  uniswap_v2.py  uniswap_v3.py  universal_router.py
pydefi/bridge/: CCTPComposer.sol  OFTComposer.sol  __init__.py  across.py  base.py  cctp.py  gaszip.py  layerzero_oft.py  mayan.py  relay.py  stargate.py
pydefi/hyperliquid/: __init__.py  client.py  signing.py
pydefi/indexer/: __init__.py  alembic.ini  indexer.py  models.py
pydefi/pathfinder/: __init__.py  graph.py  router.py
pydefi/pool_data/: __init__.py  base.py  geckoterminal.py  subgraph.py
pydefi/vm/: ApproveProxy.sol  DeFiVM.sol  IDeFiVM.sol  __init__.py  abi.py  dag.py  (+14 more)
pydifi/: __init__.py  exceptions.py  types.py
tests/: _venom_probes.py  addrs.py  bench_call_contract.py  bench_program_call.py  conftest.py  test_aggregator.py  test_amm.py  test_bridge.py  test_context.py  test_hyperliquid.py  test_indexer.py  test_pathfinder.py  test_pool_data.py  test_program.py  test_program_templates.py  test_rpc.py  test_solana.py  test_types.py  test_venom.py  test_vm.py  test_vm_backend.py  test_vm_planner.py
(+40 files in other folders)
