[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydefi"
version = "0.1.0"
description = "Modern Python library for DeFi: AMM DEXes, DEX aggregators, cross-chain bridges, and pathfinding"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "eth-contract @ git+https://github.com/yihuang/eth-contract.git@main",
    "eth-abi @ git+https://github.com/yihuang/eth-abi.git@copilot/support-hooks-for-offset-detection",
    "web3>=7.0.0",
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "msgpack>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-rerunfailures>=14.0",
    "ruff>=0.4.0",
    "py-solc-x>=2.0.0",
    "py-evm>=0.12.1b1",
]

[project.urls]
"Homepage" = "https://github.com/yihuang/pydefi"
"Repository" = "https://github.com/yihuang/pydefi"
"Bug Tracker" = "https://github.com/yihuang/pydefi/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pydefi*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: marks tests as live integration tests that require network access (run with '-m live')",
    "fork: marks tests that require a local fork of mainnet — EVM via Anvil or Solana via surfpool (run with '-m fork')",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
